--- a/About.html
+++ b/About.html
@@ -89,12 +89,12 @@
         <div class="container">
             <h2 class="l-heading">What our Guests Says</h2>
             <div class="testimonial bg-primary">
-                <img src="./img/P1.JPG" alt="Samantha">
+                <img src="./img/P1.jpg" alt="Mickey Mouse">
                 <p>"A great place to live and enjoy a comfortable life with lots of useful facilities providing the best living standards." 
                 </p>
             </div>
             <div class="testimonial bg-primary">
-                <img src="./img/P2.jpg" alt="Jan">
+                <img src="./img/P2.jpg" alt="Tom & Jerry">
                 <p>"A beautifully located place to visit and explore the beauty of Palawan with bundle of tasty meals offered. "
                 </p>
             </div>
