--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" media="screen and (max-width:768px)"href="./css/mobile.css">
     <script src="https://kit.fontawesome.com/b8b325b13d.js" crossorigin="anonymous"></script>
-    <title>Fancy Marquee | Welcome</title>
+    <title>Farm Ville de Palawan | Welcome</title>
 </head>
 <body>
     <header>
